--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,20 @@
 <div class="container">
   <h1>Vending Machine</h1>
+  <h2>
+    Items
+  </h2>
   <div class="row">
-    <h2>
-      Items
-    </h2>
-    <div *ngFor="let item of items">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">{{item.name}}</h3>
-          </div>
-          <div class="panel-body">
-            <p>{{item.price}} {{currency}}</p>
-          </div>
-          <button class="btn btn-primary" (click)="addSelectedItem(item)">Select Item</button>
+    <div>
+      <div *ngFor="let item of items">
+        <div>
+          <h3>{{item.name}}</h3>
         </div>
+        <div>
+          <p>{{item.price}} {{currency}}</p>
+        </div>
+        <button class="btn btn-primary" (click)="addSelectedItem(item)">Select Item</button>
+      </div>
+    </div>
   </div>
+
 </div>
