--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
 
   <div>
     <h1>Vending Machine</h1>
-    <div><h3>simulaing inserting cash </h3>
+    <div><h3>simulating inserting cash </h3>
       <button class="btn btn-primary" (click)="insertMoney()">Insert Cash</button><br/>
-      <div *ngIf="totalAmountInserted"> Bal {{balance}} {{currency}}</div>
+      <div *ngIf="totalAmountInserted"> Bal {{totalAmountInserted - totalAmount}} {{currency}}</div>
     </div>
 
     <div class="row">
@@ -16,7 +16,7 @@
           <div>
             <p>{{item.price}} {{currency}}</p>
           </div>
-          <button class="btn btn-primary" (click)="addSelectedItem(item)">Select Item</button>
+          <button class="btn btn-primary" (click)="addSelectedItem(item)">Select</button>
         </div>
       </div>
     </div>
